--- a/_layouts/lrc.html
+++ b/_layouts/lrc.html
@@ -1,53 +1,30 @@
-<!DOCTYPE html>
+---
+layout: default
+---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+<section class="tutorial">
+	
+	<section class="tutorial-content">
+		<h1>{{ page.title }}</h1>
 
-		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-		<link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/touch-icon.png" sizes="192x192">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
-		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Merriweather:400italic,400,300italic,300,700,700italic|Open+Sans:400italic,600italic,700italic,700,600,400|Inconsolata:400,700">
+		{% if page.type == "Video" %}
+			{% include youtube.html video_id=page.video_id %}
 
-		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
-			<script>
-				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-				ga('create', '{{ site.google_analytics_key }}', 'auto');
-				ga('send', 'pageview');
-			</script>
-			<script async src='https://www.google-analytics.com/analytics.js'></script>
+			{% if page.resources %}
+				<div class="resources">
+					<ul>
+						{% for resource in page.resources %}
+							<li><a href="{{ resource.link }}">{{ resource.name }}</a></li>
+						{% endfor %}
+					</ul>
+				</div>
+			{% endif %}
 		{% endif %}
-
-		{% seo %}
-		{% feed_meta %}
-
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	</head>
-
-	<body class="{{ page.body_class }}">
-		<header>
-			<div class="wrapper">
-				<section class="top-bar">
-					<div class="logo"><a href="/">{% include logo.html %}</a></div>
-					{% include navigation.html %}
-				</section>
-			
-			</div>
-
-		</header>
-		<section class="content">
-			<div class="wrapper">
-				{{ content }}
-			</div>
-		</section>
 		
-		
-		
-		
-		
-			<div class="tutorial-share">
+		<div class="tutorial-main">
+			{{ content }}
+		</div>
+		<div class="tutorial-share">
 			<a class="modalOpen no-smooth" href="#subscribe">{% include social-icon.html icon="Email" %} Subscribe</a>
 			<a class="modalOpen no-smooth" href="#share">{% include social-icon.html icon="Share" %} Share</a>
 		</div>
@@ -119,10 +96,43 @@
 	</div>
 </div>
 
-		
-		
+<script src="{{ site.baseurl }}/js/main.js"></script>
 
-		{% include footer.html %}
-	
-	</body>
-</html>
+<script>
+	var headings = document.querySelectorAll("h2[id]");
+
+	console.log(headings);
+	for (var i = 0; i < headings.length; i++) {
+		var anchorLink = document.createElement("a");
+		anchorLink.innerText = "#";
+		anchorLink.href = "#" + headings[i].id;
+		anchorLink.classList.add("header-link");
+
+		headings[i].appendChild(anchorLink);
+	}
+
+	$(".modalOpen").click(function() {
+		var id = $(this).attr("href");
+		$(id).addClass("show");
+
+		$(window).click(function() {
+			$(".show").removeClass("show");
+		});
+
+		$(id + " > div").click(function(event){
+			event.stopPropagation();
+		});
+		return false;
+	});
+
+	$(".close").click(function() {
+		$(".show").removeClass("show");
+		return false;
+	});
+
+	$(document).keyup(function(e) {
+		if (e.keyCode == 27) {
+			$(".show").removeClass("show");
+		}
+	});
+</script>
