Updated '_layouts/lrc.html' via CloudCannon

--- a/_layouts/lrc.html
+++ b/_layouts/lrc.html
@@ -34,7 +34,7 @@
 					{% include navigation.html %}
 				</section>
 			
-
+</div>
 <section class="tutorial">
 	
 	<section class="tutorial-content">
