--- a/_layouts/lrc.html
+++ b/_layouts/lrc.html
@@ -46,6 +46,32 @@
 				{{ content }}
 			</div>
 		</section>
+		
+		
+		
+		
+		
+		<div class="tutorial-series">
+		<h3>{{ set.title }} - Series</h3>
+		<p>{{ set.description }}</p>
+
+		{% include listings.html listings=series_posts numbered=true%}
+	</div>
+{% endif %}
+{% assign related_posts = site.related_posts %}
+{% assign related_posts_size = related_posts | size %}
+{% if related_posts_size > 0 %}
+	<div class="related">
+		<h3>Related tutorials</h3>
+
+		{% include listings.html listings=site.related_posts %}
+</div>
+		
+		
+		
+		
+		
+		
 
 		{% include footer.html %}
 		<script>
